# EDFlib-Python

./: README.md  edfreader.py  edfwriter.py  setup.cfg  test_edfreader.py
src/EDFlib/: edfreader.py  edfwriter.py
test/: edf_unit_test.py
tests/: edf_unit_test.py
