[metadata]
name = EDFlib-Python
version = 1.0.2
author = Teunis van Beelen
author_email = teuniz@protonmail.com
description = Library to read/write EDF+/BDF+ files written in pure Python by the same author as the original EDFlib.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.teuniz.net/edflib_python/
project_urls =
    Bug Tracker = https://gitlab.com/Teuniz/EDFlib-Python/-/issues
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5
install_requires = numpy>=1.17

[options.packages.find]
where = src
